tests/lean/simp11.lean.expected.out
  Set: pp::colors
  Set: pp::unicode
  Assumed: a
  Assumed: b
  Assumed: c
  Assumed: d
  Assumed: e
  Assumed: f
simp11.lean:7: error: executing script
error: simplifier failed, maximum number of steps exceeded
trying again with more steps
f + (c + f + d) + (e * (a + c) + (d + a))
====>
a + (c + (d + (d + (f + (f + (e * a + e * c))))))
